[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.58", features = ["Window", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
gloo = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
